# agent-sidecar

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  openapi.yaml  pyproject.toml
deploy/k8s/: configmap-claude-md.yaml  configmap-mcp.yaml  deployment.yaml  secret.yaml
docs/: operations.md
examples/go/: client.go  go.mod
examples/kotlin/: Client.kt  build.gradle.kts
examples/python/: client.py
scripts/: smoke.py  test.sh
sidecar/: __main__.py  app.py  auth.py  claude_runner.py  codex_runner.py  concurrency.py  config.py  errors.py  inflight.py  mcp.py  models.py  session.py  sse.py
sidecar/observability/: logging.py  metrics.py  tracing.py
sidecar/routes/: cancel.py  converse.py  health.py  metrics.py
tests/: conftest.py
tests/unit/: test_cancel.py  test_codex_runner.py  test_concurrency.py  test_drain.py  test_health.py  test_inflight.py  test_logging.py  test_mcp_config.py  test_metrics.py  test_models.py  test_routes.py  test_session.py
